BlockReaderInputStream seek in long format.